added parellex effect

--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Parallex</title>
-</head>
-<body>
-    <h1>Parallex</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Parallax</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border ">
+          Parallex wesite
+        </span>
+      </div>
+    </div>
+    <section class="section section-light">
+      <h2>Section 1</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rerum
+        exercitationem aperiam odit nobis eum dignissimos excepturi minus
+        beatae. Repudiandae, obcaecati illum vel pariatur aperiam, doloribus
+        sequi minima nobis, nesciunt quidem dolores. Nesciunt ipsum sapiente
+        accusamus obcaecati eius architecto, velit pariatur ab quae nemo
+        officiis laudantium rem, fugit laborum praesentium!
+      </p>
+    </section>
+
+    <div class="pimg2">
+      <div class="ptext">
+        <span class="border trans">
+          Parallex wesite image 2
+        </span>
+      </div>
+    </div>
+    <section class="section section-dark">
+      <h2>Section 2</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rerum
+        exercitationem aperiam odit nobis eum dignissimos excepturi minus
+        beatae. Repudiandae, obcaecati illum vel pariatur aperiam, doloribus
+        sequi minima nobis, nesciunt quidem dolores. Nesciunt ipsum sapiente
+        accusamus obcaecati eius architecto, velit pariatur ab quae nemo
+        officiis laudantium rem, fugit laborum praesentium!
+      </p>
+    </section>
+    <div class="pimg3">
+      <div class="ptext">
+        <span class="border trans">
+          Parallex wesite image 3
+        </span>
+      </div>
+    </div>
+    <section class="section section-dark">
+      <h2>Section 3</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque rerum
+        exercitationem aperiam odit nobis eum dignissimos excepturi minus
+        beatae. Repudiandae, obcaecati illum vel pariatur aperiam, doloribus
+        sequi minima nobis, nesciunt quidem dolores. Nesciunt ipsum sapiente
+        accusamus obcaecati eius architecto, velit pariatur ab quae nemo
+        officiis laudantium rem, fugit laborum praesentium!
+      </p>
+    </section>
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border ">
+          Parallex wesite
+        </span>
+      </div>
+    </div>
+  </body>
 </html>
