code cleanup and spell check

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="pimg1">
       <div class="ptext">
         <span class="border ">
-          Parallex wesite
+          Parallex website
         </span>
       </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="pimg2">
       <div class="ptext">
         <span class="border trans">
-          Parallex wesite image 2
+          Parallex website image 2
         </span>
       </div>
     </div>
@@ -50,7 +50,7 @@
     <div class="pimg3">
       <div class="ptext">
         <span class="border trans">
-          Parallex wesite image 3
+          Parallex website image 3
         </span>
       </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="pimg1">
       <div class="ptext">
         <span class="border ">
-          Parallex wesite
+          Parallex website
         </span>
       </div>
     </div>
